[gd_scene load_steps=6 format=2]

[ext_resource path="res://Items/LightOrbTest.png" type="Texture" id=1]
[ext_resource path="res://Items/Item.tscn" type="PackedScene" id=2]
[ext_resource path="res://Items/LightOrb.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 5.0

[sub_resource type="CircleShape2D" id=2]
radius = 38.0

[node name="LightOrb" instance=ExtResource( 2 )]
script = ExtResource( 3 )
item_type = "Orb"

[node name="Sprite" parent="." index="0"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" parent="." index="1"]
shape = SubResource( 1 )

[node name="SoulDetector" type="Area2D" parent="." index="2"]
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="SoulDetector" index="0"]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="." index="3"]
[connection signal="area_entered" from="SoulDetector" to="." method="_on_SoulDetector_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
